# EQ-Plugin

./: CMakeLists.txt  CMakeLists_VST3.txt  CMakeLists_template.txt  EQ-Plugin.jucer  README.md  bass_boost.filtergraph  plugin.filtergraph
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/: cmake_Commands.txt
